# muscle2

./: .gitignore  .svnignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  VERSION  build.rb  jni.sh  loggingManager.properties  makeDist.sh  muscleClient.sh  muscleManager.sh  otf.properties  update-muscle-huygens.sh
doc/: CMakeLists.txt  DoxyfileCPP.in  DoxyfileJava.in  index.html
doc/muscle_cpp_api/html/: annotated.html  classes.html  classmuscle_1_1_abstract_method_caller-members.html  classmuscle_1_1_abstract_method_caller.html  classmuscle_1_1_array_from_java_tool-members.html  classmuscle_1_1_array_from_java_tool.html  classmuscle_1_1_array_from_java_tool__coll__graph.map  classmuscle_1_1_array_from_java_tool__coll__graph.md5  classmuscle_1_1_array_to_java_tool-members.html  classmuscle_1_1_array_to_java_tool.html  classmuscle_1_1_array_to_java_tool__coll__graph.map  classmuscle_1_1_array_to_java_tool__coll__graph.md5  classmuscle_1_1_array_traits.html  classmuscle_1_1_array_traits_3_01jboolean_01_4-members.html  classmuscle_1_1_array_traits_3_01jboolean_01_4.html  classmuscle_1_1_array_traits_3_01jdouble_01_4-members.html  classmuscle_1_1_array_traits_3_01jdouble_01_4.html  classmuscle_1_1_array_traits_3_01jfloat_01_4-members.html  classmuscle_1_1_array_traits_3_01jfloat_01_4.html  classmuscle_1_1_array_traits_3_01jint_01_4-members.html  classmuscle_1_1_array_traits_3_01jint_01_4.html  classmuscle_1_1_call_static_traits-members.html  classmuscle_1_1_call_static_traits.html  classmuscle_1_1_call_static_traits_3_01bool_01_4-members.html  classmuscle_1_1_call_static_traits_3_01bool_01_4.html  classmuscle_1_1_call_static_traits_3_01jboolean_01_4-members.html  classmuscle_1_1_call_static_traits_3_01jboolean_01_4.html  classmuscle_1_1_call_static_traits_3_01jdouble_01_4-members.html  classmuscle_1_1_call_static_traits_3_01jdouble_01_4.html  classmuscle_1_1_call_static_traits_3_01jfloat_01_4-members.html  classmuscle_1_1_call_static_traits_3_01jfloat_01_4.html  classmuscle_1_1_call_static_traits_3_01jint_01_4-members.html  classmuscle_1_1_call_static_traits_3_01jint_01_4.html  classmuscle_1_1_call_static_traits_3_01jobject_01_4-members.html  classmuscle_1_1_call_static_traits_3_01jobject_01_4.html  classmuscle_1_1_call_static_traits_3_01void_01_4-members.html  classmuscle_1_1_call_static_traits_3_01void_01_4.html  classmuscle_1_1_call_traits-members.html  classmuscle_1_1_call_traits.html  classmuscle_1_1_call_traits_3_01bool_01_4-members.html  (+906 more)
doc/muscle_java_api/html/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
scripts/: CMakeLists.txt  muscle  muscle.in  muscle.profile.in  muscle2.in  muscle2stats
src/cpp/mpwide/: .gitignore  CMakeLists.txt  TestRestart.cpp  bandwidth_monitor.txt  mpwide-macros.h
src/cpp/mto/: CMakeLists.txt  README  connection.cpp  connection.h  connection.hpp  constants.hpp  logger.cpp  logger.h  logger.hpp  main.cpp  main.h  main.hpp  messages.cpp  messages.h  messages.hpp  mto-config.cfg.dist  mto-topology.cfg  mto-topology.cfg.dist  options.cpp  options.h  options.hpp  peerconnectionhandler.cpp  peerconnectionhandler.h  peerconnectionhandler.hpp  tester.cpp  topology.cpp  topology.hpp
src/cpp/muscle/: ArrayFromJavaTool.h  ArrayToJavaTool.h  ArrayTraits.h  CMakeLists.txt  CMakePackage.txt  FindJNI.cmake  FindJNI.custom.cmake  JNIArray.h  JNIMethod.cpp  JNIMethod.h  JNITool.cpp  JNITool.h  SingleFromJavaTool.cpp  SingleFromJavaTool.h  SingleToJavaTool.cpp  SingleToJavaTool.h  VABEGIN.cpp  VABEGIN.h  Version.h  Version.java.cpp  Version.java.h  includes.cmake  mainpage.h
src/cpp/muscle2/: CMakeLists.txt  MuscleC.h  MuscleCPP.cpp  MuscleCPP.hpp  MuscleTypes.h  cmuscle.cpp  cmuscle.h  communicator.cpp  communicator.hpp  complex_data.cpp  complex_data.hpp  cppmuscle.cpp  cppmuscle.hpp  custom_communicator.cpp  custom_communicator.h  exception.hpp  fortranmuscle.cpp  fortranmuscle.h  logger.cpp  logger.hpp  muscle_complex_data.cpp  muscle_complex_data.hpp  muscle_perf.cpp  muscle_perf.h  muscle_types.h  xdr_communicator.cpp  xdr_communicator.hpp
src/java/: CMakeLists.txt
src/java/jadetool/: ContainerControllerTool.java  DFServiceTool.java  MessageTool.java  PlatformTool.java
src/java/javatool/: ArraysTool.java  ClassTool.java  DecimalMeasureTool.java  LoggerTool.java  PropertiesTool.java
src/java/muscle/: Constant.java  Env.java  NativeAccess.java  Version.java  gittag.properties
src/java/utilities/: ArrayMap.java  ArraySet.java  CArrayList.java  CStyleArray2Array3DTransmuter.java  CodeWriter.java  DelayedAction.java  Env.java  FastArrayList.java  Invoker.java  JVM.java  JavaEcho.java  MachineInfo.java  MatrixReader.java  MiscTool.java  MpiSlaveKernelExecutor.java  OSTool.java  OutputStreamWriterTool.java  PingTool.java  PipeTransmuter.java  PrintBit.java  PrintTime.java  RAMInfo.java  SafeQueueConsumerThread.java  SafeThread.java  SafeTriggeredThread.java  ThreadCpuTimer.java  Timer.java  Timing.java  Transmutable.java
src/matlab/muscle/: CMakeLists.txt  muscleFinalize.c  muscleGetProperty.c  muscleHasProperty.c  muscleInit.c  muscleKernelName.c  muscleReceive.c  muscleSend.c  muscleWillStop.c
src/python/muscle/: CMakeLists.txt  pythonmuscle.cpp  pythonmuscle.hpp  setup.py
src/resources/: CMakeLists.txt
src/resources/logging/: logging.OFF.properties  logging.TMP.properties  logging.after_teardown.properties  logging.debug.properties  logging.manager.properties  logging.properties  logging.quiet.manager.properties  logging.quiet.properties  (+2 more)
src/ruby/: CMakeLists.txt  cli.rb  cli2.rb  cmake.rb  components.rb  connectionscheme.rb  csgraph.rb  cxa.env.rb  cxa.rb  instance.rb  jade.rb  json.rb  jvm.rb  memoryrange.rb  monitor.rb  muscle.cls.rb  muscle.cmd  muscle.env.helm.rb  muscle.env.rb  muscle.rb  muscle2.rb  sandbox.rb  utilities.rb
test/cpp/: CMakeLists.txt  assertTemplates.h  test_mto.cpp  test_util.cpp  tester.cpp
(+1138 files in other folders)
