PROJECT(muscleruby)

FILE(GLOB THIS_RUBY_FILES *.rb)
list(REMOVE_ITEM THIS_RUBY_FILES muscle2.rb)

FILE(GLOB JSON_RUBY_FILES json/*.xpm json/*.rb)
FILE(GLOB JSON_ADD_RUBY_FILES json/add/*.rb)
FILE(GLOB JSON_PURE_RUBY_FILES json/pure/*.rb)

install(FILES ${THIS_RUBY_FILES} DESTINATION share/muscle/ruby)
install(FILES ${JSON_RUBY_FILES} DESTINATION share/muscle/ruby/json)
install(FILES ${JSON_ADD_RUBY_FILES} DESTINATION share/muscle/ruby/json/add)
install(FILES ${JSON_PURE_RUBY_FILES} DESTINATION share/muscle/ruby/json/pure)
install(FILES muscle2.rb DESTINATION share/muscle/ruby PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE) 
