PROJECT(muscleruby)

FILE(GLOB THIS_RUBY_FILES *.rb)
FILE(GLOB JSON_RUBY_FILES json/*.xpm json/*.rb)
FILE(GLOB JSON_ADD_RUBY_FILES json/add/*.rb)
FILE(GLOB JSON_PURE_RUBY_FILES json/pure/*.rb)

set(RUBY_DIR share/muscle/ruby)
install(FILES ${THIS_RUBY_FILES} DESTINATION ${RUBY_DIR})
install(FILES ${JSON_RUBY_FILES} DESTINATION ${RUBY_DIR}/json)
install(FILES ${JSON_ADD_RUBY_FILES} DESTINATION ${RUBY_DIR}/json/add)
install(FILES ${JSON_PURE_RUBY_FILES} DESTINATION ${RUBY_DIR}/json/pure)
